extras/glauth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glauth
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: glauth-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glauth
  template:
    metadata:
      labels:
        app: glauth
    spec:
      containers:
      - name: glauth
        image: glauth/glauth:latest
        ports:
        - containerPort: 3893  # LDAP
          name: ldap
        - containerPort: 3894  # LDAPS
          name: ldaps
        - containerPort: 5555  # Additional port
          name: additional
        volumeMounts:
        - name: config
          mountPath: /app/config
          readOnly: true
        - name: tls
          mountPath: /etc/tls/serving
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: glauth-config
          items:
          - key: config.cfg
            path: config.cfg
      - name: tls
        secret:
          secretName: glauth-tls
          optional: false

---
apiVersion: v1
kind: Service
metadata:
  name: glauth
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: glauth-tls
spec:
  selector:
    app: glauth
  ports:
  - name: ldap
    port: 389
    targetPort: 3893
  - name: ldaps
    port: 636
    targetPort: 3894
  - name: additional
    port: 5555
    targetPort: 5555
  type: ClusterIP
