extras/ssh-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: slurm-login-sshproxy
  namespace: slurm
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app.kubernetes.io/instance: slurm
    app.kubernetes.io/name: login
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: slurm-login
  namespace: slurm
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: slurm-login-sshproxy
    weight: 100
